# internal/api/xxxxxs/models/get_xxxxx_by_id.go
@@ -9,10 +9,7 @@ type SwaggerGetXxxxxByIDResponse struct {
 }
 
 type GetXxxxxByIDResponse struct {
-	ID        string `json:"id"`
-	Code      string `json:"code"`
-	Name      string `json:"name"`
-	Status    string `json:"status"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	ID   string `json:"id"`
+	Code string `json:"code"`
+	Name string `json:"name"`
 }
