# internal/api/xxxxxs/models/get_xxxxx_paging.go
@@ -15,10 +15,7 @@ type SwaggerGetXxxxxPagingResponse struct {
 }
 
 type GetXxxxxPagingResponse struct {
-	ID        string `json:"id"`
-	Code      string `json:"code"`
-	Name      string `json:"name"`
-	Status    string `json:"status"`
-	CreatedAt string `json:"created_at"`
-	UpdatedAt string `json:"updated_at"`
+	ID   string `json:"id"`
+	Code string `json:"code"`
+	Name string `json:"name"`
 }
